# PokeRogue

./: .TODO.txt  .gitignore  CMakeLists.txt  README.md  TODO.txt
docs/: RP2040ピンを全部使える Raspberry Pi Pico Purple version _ たまねぎブログ.html  battery layout
docs/RP2040ピンを全部使える Raspberry Pi Pico Purple version _ たまねぎブログ_files/: anchor.html  api.js  f.txt  favicons  js
scripts/: TODO  build_cartridge_code.sh  build_cartridge_data.sh  deploy.sh  gen_image_batch_all_gpus.sh  gen_text_descriptions.sh  gen_tiles.sh  generate_fonts.sh  image_2_download_image_gens.sh  image_3_process_images.sh  text_1_populate_game_data.sh
scripts/python/cartridge/: make_cartridge.py  make_cartridge_code.py  make_cartridge_data.py  make_dummy_constants.py  manage.py
src/GameCartridge/: CMakeLists.txt  ram.ld
src/GameCartridge/code/: CMakeLists.txt  main.c  ram.ld
src/GameCartridge/data/: CMakeLists.txt  ram.ld
src/GameCore/: CMakeLists.txt  ai.c  ai.h  animation.c  animation.h  animation_effects.c  animation_effects.h  animation_item_struck.c  animation_items_attack.c  animation_skills_attack.c  animation_skills_struck.c  animation_spells_attack.c  animation_spells_struck.c  battles.c  battles.h  camera.c  camera.h  collision.c  collision.h  constants.h  core.c  core.h  effects.c  effects.h  effects_items.c  effects_objects.c  effects_skills.c  effects_spells.c  entities.c  entities.h  enums.h  game_state.c  game_state.h  graphics.c  graphics.h  hash_map.c  hash_map.h  map.c  map.h  memory_access.c  (+32 more)
src/GameCore/common/: constants.h  enums.h  types.h
src/GameCore/inc/: data_colors16.inc  data_colors256.inc  data_constants.inc  data_creature_level_up_skills.inc  data_creature_skills.inc  data_creature_stats.inc  data_enum_creatures.inc  data_enum_items.inc  data_enum_objects.inc  data_enum_skills.inc  data_enum_spells.inc  data_enum_tiles.inc  data_enum_trainers.inc  data_font16x16.inc  data_font20x20.inc  data_font24x24.inc  data_font32x32.inc  data_font8x8.inc  data_items.inc  data_objects.inc  data_skills.inc  data_spells.inc  data_tileset_monsterGroups.inc  data_tileset_themeGroups.inc  data_type_effects.inc  data_types_creatures.inc  decl_animation_items_attack.inc  decl_animation_items_struck.inc  decl_animation_skills_attack.inc  decl_animation_skills_struck.inc  decl_animation_spells_attack.inc  decl_animation_spells_struck.inc  decl_items.inc  decl_objects.inc  decl_skills.inc  decl_spells.inc  funcs_animation_items_attack.inc  funcs_animation_items_struck.inc  funcs_animation_skills_attack.inc  funcs_animation_skills_struck.inc  (+94 more)
src/GameCore/overlay_battle/: battle_actions.c  battle_actions.h  battle_animation.c  battle_animation.h  battle_animation_effects.c  battle_animation_effects.h  battle_animation_item_struck.c  battle_animation_items_attack.c  battle_animation_skills_attack.c  battle_animation_skills_struck.c  battle_animation_spells_attack.c  battle_animation_spells_struck.c  battle_effects_skills.c  battle_effects_skills.h  battle_entities.c  battle_entities.h  battle_graphics.c  battle_graphics.h  battle_memory_access.c  battle_memory_access.h  battle_menu.c  battle_menu.h  battle_player.c  battle_player.h  battle_ram.c  battle_ram.h  battle_state.c  battle_state.h  battle_stats.c  battle_stats.h  battle_ui.c  battle_ui.h
src/GameCore/overlay_core/: core_actions.c  core_actions.h  core_effects.c  core_effects.h  core_effects_items.c  core_effects_items.h  core_effects_spells.c  core_effects_spells.h  core_entities.c  core_entities.h  core_graphics.c  core_graphics.h  core_map.c  core_map.h  core_memory_access.c  core_memory_access.h  core_menu.c  core_menu.h  core_player.c  core_player.h  core_ram.c  core_ram.h  core_save.c  core_save.h  core_sound.c  core_sound.h  core_state.c  core_state.h  core_stats.c  core_stats.h  core_tiles.c  core_tiles.h  core_utils.c  core_utils.h
src/GameCore/overlay_data/: data_rom.c  data_rom.h
src/GameCore/overlay_generate_map/: generate_map.c  generate_map.h  generate_map_state.c  generate_map_state.h
src/GameCore/overlay_map/: map.c  map.h  map_actions.c  map_actions.h  map_ai.c  map_ai.h  map_animation.c  map_animation.h  map_camera.c  map_camera.h  map_collision.c  map_collision.h  map_effects.c  map_effects.h  map_effects_objects.c  map_entities.c  map_entities.h  map_graphics.c  map_graphics.h  map_memory_access.c  map_memory_access.h  map_menu.c  map_menu.h  map_movement.c  map_movement.h  map_player.c  map_player.h  map_ram.c  map_ram.h  map_rendering.c  map_rendering.h  map_state.c  map_state.h  map_stats.c  map_stats.h  map_status_effects.c  map_utils.c  map_utils.h  tooltip.c  tooltip.h
src/GameCore/overlay_splash_screen/: splash_animation.c  splash_animation.h  splash_ram.c  splash_ram.h  splash_state.c  splash_state.h
src/GameCoreTests/: CMakeLists.txt  animation_tests.c  animation_tests.h  combat_tests.c  combat_tests.h  creatures.c  creatures.h  hash_map_tests.c  hash_map_tests.h  main.c  map.c  map.h  test_objects.c  test_objects.h  utils_tests.c  utils_tests.h
src/PicoGame/: CMakeLists.txt  cartridge.c  cartridge.h  cartridge_ram.c  cartridge_ram.h  cartridge_rom.c  cartridge_rom.h  cartridge_save.c  cartridge_save.h  catridge_rom.c  catridge_rom.h  constants.h  debug.c  debug.h  hardware.c  hardware.h  ili9341.c  ili9341.h  init.c  init.h  input.c  input.h  main.c  memmap_default.ld  memory_psram.c  memory_psram.h  memory_ram.c  memory_ram.h  memory_rom.c  pico_constants.h  pico_ram.c  pico_ram.h  sd_card.c  sd_card.h  sounds.c  sounds.h
src/PicoTypes/: CMakeLists.txt  lib_constants.h  lib_debugging.h  lib_decl.h  lib_enums.h  lib_memory.h  lib_types.h
src/SDLGame/: CMakeLists.txt  audio.c  audio.h  debug.c  debug.h  graphics.c  graphics.h  hardware.c  hardware.h  input.c  input.h  main.c  memory.c  memory.h  ram.c  ram.h
src/tools/image_viewer/: CMakeLists.txt  TODO  constants.h  db.cpp  db.h  globals.cpp  globals.h  images.cpp  images.h  init.cpp  init.h  input.cpp  input.h  main.cpp  rendering.cpp  rendering.h  text.cpp  text.h  tile_map_preview.cpp  tile_map_preview.h  ui.cpp  ui.h  update.cpp  update.h
(+58 files in other folders)
